src/components/PersonasCard/PersonasCard.scss
@import '../../styles/colors.scss';
@import '../../styles/mixins.scss';
@import '../../styles/breakpoints.scss';
@import '../../styles/fonts.scss';

.card {
  display: flex;
  align-content: center;
  background-color: $alabaster;
  font-family: $font-secondary;
  color: $san-juan;
  border-radius: 25px;
  margin: space(32);
  max-width: pxtorem(300px);
  cursor: pointer;

  .flex-container {
    padding: 0 !important;
    width: 100%;
    align-items: stretch;
    height: 100%;

    @include for-phone-only {
      margin: 0 !important;
    }
  }

  &:hover {
    box-shadow: 0 2px 4px 0 rgba(56, 56, 56, 0.5);
  }

  @include for-tablet-portrait-down {
    margin: space(12);
  }

  @include for-phone-only {
    background-color: $white;
    margin: space(20) 0;
  }

  @include for-tablet-portrait-down {
    border-radius: 11px;

    img {
      border-radius: 11px;
    }
  }

  @include for-tablet-portrait-up {
    flex-direction: column;
  }

  img {
    width: 100%;
    height: 100%;
    border-top-left-radius: 11px;
    border-top-right-radius: 11px;
  }
}

.card__header {
  @include for-phone-only {
    font-size: $font-base;
  }

  @include for-desktop-up {
    font-size: pxtorem(27px);
  }
}

.card__description {
  box-sizing: border-box;
  padding: space(16) space(20);
  height: 100%;

  @include for-tablet-portrait-down {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  @include for-phone-only {
    padding: space(16);
  }
}

